--- a/AutoInsuranceQuote/Views/Admin/Index.cshtml
+++ b/AutoInsuranceQuote/Views/Admin/Index.cshtml
@@ -1,23 +1,37 @@
-﻿@using AutoInsuranceQuote.Models
-@model List<AutoQuote>
+﻿@using AutoInsuranceQuote.ViewModel
+@model List<AutoQuoteVM>
 
 <div class="row no-gutters m-3">
     <div class="card col-sm-12 col-md-10 col-lg-6 mx-auto shadow">
         <div class="card-header text-center">
-            <h5 class="m-0">Quotes</h5>
+            <h5 class="m-0">Lists Of Insurance Quotes</h5>
         </div>
         <div class="card-body">
             @foreach (var quote in Model)
             {
-                <div class="col">
-                    @quote.FirstName
-                </div>
-                <div class="col">
-                    @quote.LastName
-                </div>
-                <div class="col">
-                    @quote.EmailAddress
-                </div>
+                using (Html.BeginForm("Delete", "Admin", FormMethod.Post))
+                {
+                    <input type="hidden" name="Id" value="@quote.Id" />
+                    <div class="row mb-3">
+                        <div class="col">
+                            @quote.FirstName
+                        </div>
+                        <div class="col">
+                            @quote.LastName
+                        </div>
+                        <div class="col-4">
+                            @quote.EmailAddress
+                        </div>
+                        <div class="col-2">
+                            $ @quote.Quote / month
+                        </div>
+                        <div class="col">
+                            <button type="submit" class="btn btn-danger btn-block">
+                                Delete
+                            </button>
+                        </div>
+                    </div>
+                }
             }
         </div>
     </div>
