--- a/AutoInsuranceQuote/Views/Home/Index.cshtml
+++ b/AutoInsuranceQuote/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         {
             <div class="card-body">
                 <!--Personal Information-->
-                <div class="row mx-auto">
+                <div class="row mx-auto justify-content-center">
                     <h5 class="card-title">Personal Information</h5>
                     <div class="form-group col-md-12">
                         <input name="FirstName" type="text" class="form-control" placeholder="First Name" />
@@ -26,7 +26,7 @@
             </div>
             <div class="card-body">
                 <!--Car Information-->
-                <div class="row mx-auto">
+                <div class="row mx-auto justify-content-center">
                     <h5 class="card-title">Car Information</h5>
                     <div class="form-group col-md-12">
                         <input name="CarYear" type="text" class="form-control" placeholder="Car Year" />
@@ -41,7 +41,7 @@
             </div>
             <div class="card-body">
                 <!--History & Coverage-->
-                <div class="row mx-auto">
+                <div class="row mx-auto justify-content-center">
                     <h5 class="card-title">History & Coverage</h5>
                     <div class="form-group col-md-12">
                         <p class="card-text">Have you had a DUI?</p>
