--- a/AutoInsuranceQuote/Views/Home/Success.cshtml
+++ b/AutoInsuranceQuote/Views/Home/Success.cshtml
@@ -1,2 +1,13 @@
-﻿<h2>Success</h2>
+﻿@using AutoInsuranceQuote.Models
+
+<div class="row no-gutters m-3">
+    <div class="card col-sm-12 col-md-10 col-lg-6 mx-auto shadow">
+        <div class="card-header text-center">
+            <h5 class="m-0">Your Quote</h5>
+        </div>
+        <div class="card-body text-center font-weight-bold ">
+            <h3>@ViewBag.Message</h3>
+        </div>
+    </div>
+</div>
 
